[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "check-net"
version = "0.1.0"
description = "Lightweight internet connectivity monitor with SQLite storage and uptime visualization."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
check-net = "checknet.cli:main"

[tool.setuptools]
packages = ["checknet"]
